--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.hdavidzhu.savethechildren"
-        minSdkVersion 16
+        minSdkVersion 10
         targetSdkVersion 20
         versionCode 1
         versionName "1.0"
@@ -22,4 +22,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.mcxiaoke.volley:library:1.0.7'
+    compile 'com.android.support:appcompat-v7:20.0.+'
 }
