--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:theme="@style/AppTheme" >
 
         <activity
+            android:theme="@style/AppTheme"
             android:name=".MainMenu"
             android:label="@string/app_name" >
             <intent-filter>
@@ -21,6 +22,7 @@
         </activity>
 
         <activity
+            android:theme="@style/AppTheme"
             android:name=".Students"
             android:label="@string/app_name" >
             <intent-filter>
