--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,26 +4,38 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <application
+    <application android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name">
 
-        <activity
-            android:theme="@style/AppTheme"
-            android:name=".MainMenu"
+        <activity android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
+
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="com.package.name.MyActivity"/>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.ROSTER" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+                <data android:path="@string/roster" />
+            </intent-filter>
+
         </activity>
 
-        <activity
-            android:theme="@style/AppTheme"
-            android:name=".Students"
+        <activity android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
+            android:name=".RosterTest"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,5 +44,7 @@
             </intent-filter>
         </activity>
 
+
     </application>
+
 </manifest>
