--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         </activity>
 
         <activity android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
-            android:name=".RosterTest"
+            android:name=".Roster"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
