--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,12 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <application android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
+    <application android:theme="@android:style/Theme.Holo.Light"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name">
 
-        <activity android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
+        <activity
 
             android:name=".MainActivity"
             android:label="@string/app_name" >
