--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 20
-    buildToolsVersion "20.0.0"
+    buildToolsVersion '20.0.0'
 
     defaultConfig {
         applicationId "com.hdavidzhu.savethechildren"
@@ -28,10 +28,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.mcxiaoke.volley:library:1.0.7'
     compile 'com.couchbase.lite:couchbase-lite-android:1.0.2'
-    compile "com.android.support:support-v4:18.0.+"
+    compile 'com.android.support:support-v4:20.0.+'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     //compile.android.support:support-v4:10.0.+
 }
 
