--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <application android:theme="@android:style/Theme.Holo.Light"
+    <application
+        android:name=".MyApplication"
+        android:theme="@android:style/Theme.Holo.Light"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name">
