--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,45 +6,20 @@
 
     <application
         android:name=".MyApplication"
-        android:theme="@android:style/Theme.Holo.Light"
+
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name">
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme"
+        >
 
         <activity
-
             android:name=".MainActivity"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <action android:name="com.package.name.MyActivity"/>
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
-            <intent-filter>
-                <action android:name="android.intent.action.ROSTER" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-                <data android:path="@string/roster" />
-            </intent-filter>
 
         </activity>
-
-        <!--<activity android:theme="@android:style/Theme.Holo.Light.DarkActionBar"-->
-            <!--android:name=".Roster"-->
-            <!--android:label="@string/app_name" >-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
-
-                <!--<category android:name="android.intent.category.DEFAULT" />-->
-            <!--</intent-filter>-->
-        <!--</activity>-->
 
 
     </application>
