--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,8 @@ android {
 
 dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.7'
-    compile 'com.couchbase.lite:couchbase-lite-android:1.0.2'
     compile 'com.android.support:support-v4:20.0.+'
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.fasterxml.jackson.core:jackson-core:2.4.4'
     //compile.android.support:support-v4:10.0.+
 }
