--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,12 @@
         android:label="@string/app_name">
 
         <activity
-
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
+            <!--android:uiOptions="splitActionBarWhenNarrow">-->
+            <meta-data android:name="android.support.UI_OPTIONS"
+                android:value="splitActionBarWhenNarrow"/>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,15 +39,6 @@
 
         </activity>
 
-        <!--<activity android:theme="@android:style/Theme.Holo.Light.DarkActionBar"-->
-            <!--android:name=".Roster"-->
-            <!--android:label="@string/app_name" >-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
-
-                <!--<category android:name="android.intent.category.DEFAULT" />-->
-            <!--</intent-filter>-->
-        <!--</activity>-->
 
 
     </application>
